--- a/app/views/search/partials/_halo4_account.html.erb
+++ b/app/views/search/partials/_halo4_account.html.erb
@@ -5,7 +5,7 @@ Guide;
 
 <div class="col-md-4 entry">
 	<a class="nope" href="<%= halo4_servicerecord_path(gamertag_validation(halo4_account.gamertag.gamertag)) %>">
-		<div class="spartan-image" style="background-image: url(<%= get_player_model_url(gamertag_validation(halo4_account.gamertag.gamertag), 'large', 'posed') %>)"></div>
+		<div class="spartan-image" style="background-image: url(<%= get_player_model_url(halo4_account.gamertag.gamertag, 'large', 'posed') %>)"></div>
 		<div class="mask"></div>
 		<div class="text-container">
 			<h2><%= gamertag_validation(halo4_account.gamertag.gamertag) %></h2>
