I would fix #35 the second i make a github issue for it.

--- a/app/views/halo4/service_record/index.html.erb
+++ b/app/views/halo4/service_record/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :halo4, true %>
-<% content_for :title, "Halo 4 - #{gamertag_validation(@service_record['Gamertag'])}" %>	
+<% content_for :title, "Halo 4 - #{gamertag_validation(@service_record['Gamertag'])}'s Service Record" %>	
 <% content_for :has_footer, true %>
 <% content_for :halo4_active, 'overview' %>
 <% content_for :scripts do %>
