--- a/app/views/user/user/new.html.erb
+++ b/app/views/user/user/new.html.erb
@@ -244,6 +244,9 @@ $(document).ready(function() {
 					<section class="input-section email-section row">
 						<div class="col-md-6">
 							<span class="title">Invitation Code</span>
+							<p>
+								While the site is in preview, the user section is invite only (since it's only partially functional). Once we get closer to launch, these parts of the site will be open for all.
+							</p>
 							<div class="input-group">
 								<span class="input-group-addon">@</span>
 								<%= f.text_field :invite_code, placeholder: 'Invitation Code', class: 'form-control' %>
