all posts, and active category, hue

--- a/app/views/blog/partials/_category_sidebar.html.erb
+++ b/app/views/blog/partials/_category_sidebar.html.erb
@@ -3,8 +3,11 @@
 		<li class="active">
 			<a href="#">Blog</a>
 			<ul class="nav">
+				<li class="<%= 'active' if (@focus == nil) %>">
+					<%= link_to('All Posts', blog_home_path(page: 1)) %>
+				</li>
 				<% BlogCategory.all.each do |blog_category| %>
-					<li>
+					<li class="<%= 'active' if (@focus != nil && blog_category.id == @focus.id) %>">
 						<%= link_to blog_category.name, blog_home_path(page: 1, focus: blog_category.slug) %>
 					</li>
 				<% end %>
