move JS to index page

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -2,6 +2,27 @@
 <% content_for :title, 'Welcome' %>	
 <% content_for :has_footer, true %>
 <% content_for :template, 'home' %>
+<% content_for :scripts do %>
+	<script>
+		$(document).ready(function() {
+			$.getJSON('https://api.github.com/repos/thetree/branch/commits', function(data) {
+				var commit = data[0];
+
+				// Link to last commit
+				$('.project-stats > li > #last-commit').attr('href', "https://github.com/thetree/branch/commit/" + commit.sha);
+				$('.project-stats > li > #last-commit').text(commit.sha.substring(0,7));
+
+				// Link to last commiter
+				$('.project-stats > li > #last-commiter').attr('href', "https://github.com/" + commit.committer.login);
+				$('.project-stats > li > #last-commiter').text(commit.committer.login);
+
+				setTimeout(function() {
+					$('.project-stats').fadeIn(600);
+				}, 1000);
+			});
+		});
+	</script>
+<% end %>
 
 <div class="bs-header welcome-header" id="content">
 	<div class="container">
