wrote content for the welcome page

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -51,7 +51,7 @@
 
 	<div class="row central">
 		<div class="col-md-4">
-			<%= image_tag 'placeholder-140x140.png', { class: 'img-circle', style: 'width: 140px; height: 140px;' } %>
+			<%= image_tag('preview-responsive.png', { class: 'img-circle', style: 'width: 140px; height: 140px;' }) %>
 			<h2>Simple</h2>
 			<p>
 				Branch is designed from top to bottom to show your stats in a clean, and simple mannor. And it is entirely responsive to work on every device you own.
@@ -59,7 +59,7 @@
 		</div>
 
 		<div class="col-md-4">
-			<%= image_tag 'placeholder-140x140.png', { class: 'img-circle', style: 'width: 140px; height: 140px;' } %>
+			<%= image_tag('preview-speed.png', { class: 'img-circle', style: 'width: 140px; height: 140px;' }) %>
 			<h2>Fast</h2>
 			<p>
 				Branch is built without fancy background videos, 'edgy' animated buttons, and 2.2mb of clutter. So you can spend less time waiting, and more time viewing.
@@ -67,7 +67,7 @@
 		</div>
 
 		<div class="col-md-4">
-			<%= image_tag 'placeholder-140x140.png', { class: 'img-circle', style: 'width: 140px; height: 140px;' } %>
+			<%= image_tag('preview-social.png', { class: 'img-circle', style: 'width: 140px; height: 140px;' }) %>
 			<h2>Social</h2>
 			<p>
 				What fun is getting a K/D of 6.9, or camping in lighting flag to get 1,000's of kills if you can't even brag about it on your favourite social network?
@@ -85,7 +85,7 @@
 			</p>
 		</div>
 		<div class="col-md-5">
-			<%= image_tag 'placeholder-500x500.png', { class: 'featurette-image img-responsive', style: 'width: 500px; height: 500px;' } %>
+			<%= image_tag('marketing-responsive.png', { class: 'featurette-image img-responsive', style: 'width: 500px; height: 400px;' }) %>
 		</div>
 	</div>
 
@@ -93,12 +93,12 @@
 
 	<div class="row featurette">
 		<div class="col-md-5">
-			<%= image_tag 'placeholder-500x500.png', { class: 'featurette-image img-responsive', style: 'width: 500px; height: 500px;' } %>
+			<%= image_tag('marketing-updates.png', { class: 'featurette-image img-responsive', style: 'width: 500px; height: 400px;' }) %>
 		</div>
 		<div class="col-md-7">
 			<h2>Regular Updates, <span class="text-muted">like, seriously.</span></h2>
 			<p class="lead">
-				Updates, fixes and tweaks<sup>(twerks)</sup> are pretty regular, and if you have an idea, i'd love to <a target="_blank" href="#">hear</a> from you.
+				Updates, fixes and tweaks are pretty regular, and if you have an idea, i'd love to <a target="_blank" href="https://github.com/TheTree/Branch/issues/new?labels=feature%20addition">hear</a> from you.
 			</p>
 		</div>
 	</div>
@@ -109,11 +109,11 @@
 		<div class="col-md-7">
 			<h2>Open Source, <span class="text-muted">just for the neckbeards.</span></h2>
 			<p class="lead">
-				I use Git.. You use Git.. Even your grandmother uses Git.. So lets do some <a target="_blank" href="#">Git</a> together! pls? ;_;
+				It'd be no fun if we kept all of the good stuff to ourselfs now would it? Go check out the repo on <a href="https://github.com/TheTree/Branch/" target="_blank">GitHub</a> and get forking <sup>;)</sup>
 			</p>
 		</div>
 		<div class="col-md-5">
-			<%= image_tag 'placeholder-500x500.png', { class: 'featurette-image img-responsive', style: 'width: 500px; height: 500px;' } %>
+			<%= image_tag('marketing-opensauce.png', { class: 'featurette-image img-responsive', style: 'width: 500px; height: 400px;' }) %>
 		</div>
 	</div>
 </div>
