--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 		</title>
 
 		<!-- Stock third Party -->
-		<%= stylesheet_link_tag    "bootstrap", :media => "all" %>
+		<%= stylesheet_link_tag    "bootstrap.min", :media => "all" %>
 
 		<!-- App Style Sheets -->
 		<%= stylesheet_link_tag    "branch-theme", :media => "all" %>
