--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
 								<li class="divider"></li>
 								<li class="dropdown-header">Leaf</li>
 								<li>
-									<a href="http://leafapp.co/h4/leaderboards">Leaderboards</a>
+									<a href="http://leafapp.co/h4/csr_leaderboards">Leaderboards</a>
 								</li>
 								<li>
 									<a href="http://leafapp.co/h4/top_ten">Top Ten Leaderboards</a>
