--- a/app/views/blog/home/index.html.erb
+++ b/app/views/blog/home/index.html.erb
@@ -11,7 +11,7 @@
 <div class="bs-header" id="content">
 	<div class="container">
 		<h1>Blog</h1>
-		<p>sysops, stats, new features. shit like that.</p>
+		<p>Announcements, Features and Stats.</p>
 	</div>
 </div>
 
