--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -31,11 +31,11 @@
 
 		<ul class="project-stats" style="display: none;">
 			<li>
-				Last Commit: <a id="last-commit" target="_blank" href=""></a>
+				Last Commit: <a class="alt" id="last-commit" target="_blank" href=""></a>
 			</li>
 
 			<li>
-				By: <a id="last-commiter" target="_blank" href=""></a>
+				By: <a class="alt" id="last-commiter" target="_blank" href=""></a>
 			</li>
 		</ul>
 
