social media test

--- a/app/views/halo4/service_record/index.html.erb
+++ b/app/views/halo4/service_record/index.html.erb
@@ -32,6 +32,14 @@
 	);
 </script>
 <% end %>
+<% content_for :social_meta do %>
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@alexerax">
+	<meta name="twitter:title" content="<%= gamertag_validation(@service_record["Gamertag"]) %>'s Halo 4 Service Record">
+	<meta name="twitter:description" content="<%= gamertag_validation(@service_record["Gamertag"]) %> has played <%= number_with_delimiter(@service_record['GameModes'][2]['TotalGamesStarted'], delimiter: ',') %> games, has <%= number_with_delimiter(@service_record['GameModes'][2]['TotalKills'], delimiter: ',') %> and has a K/D ratio of <%= @service_record['GameModes'][2]['KDRatio'] %>">
+	<meta name="twitter:image:src" content="">
+	<meta name="twitter:domain" content="https://branchapp.co">
+<% end %>
 <% content_for :template, 'halo4 halo4_service_record' %>
 
 <%= render partial: 'halo4/partials/header' %>
