--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
 		<meta name="viewport" content="user-scalable=0, initial-scale=1.0">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		
+		<%= yield(:social_meta) if content_for?(:social_meta) %>
+
 		<%= csrf_meta_tags %>
 	</head>
 	<body class="<%= yield(:template) if content_for? :template %>">
