--- a/app/views/halo4/competitive_skill_rank/details.html.erb
+++ b/app/views/halo4/competitive_skill_rank/details.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 <% content_for :template, 'halo4 halo4_csr' %>
 
-<%= render partial: 'halo4/partials/header' %>
+<%= render partial: 'halo4/partials/header', locals: { show_social: true } %>
 
 <div class="container">
 	<div class="row">
