--- a/app/views/halo4/game_history/index.html.erb
+++ b/app/views/halo4/game_history/index.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 <% content_for :template, 'halo4 halo4_game_history' %>
 
-<%= render partial: 'halo4/partials/header' %>
+<%= render partial: 'halo4/partials/header', locals: { show_social: true } %>
 
 <div class="container">
 	<div class="row">
