--- a/app/views/halo4/game_history/view.html.erb
+++ b/app/views/halo4/game_history/view.html.erb
@@ -4,65 +4,104 @@
 <% content_for :halo4_active, 'game_history' %>
 <% content_for :halo4_game_history_active, @css_class %>
 <% content_for :scripts do %>
-<link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.4.2/morris.min.js"></script>
-<script>
-	function generateGraphHoverView(index, options, content, unit) {
-		var row = options.data[index];
-		var ykeys = options.ykeys;
-		var xkey = options.xkey;
-		var labels = options.labels;
-		
-		var output = '<div class="graph-hover-legend"><span class="time">' + row[xkey] + ' Seconds</span><br /><div class="key">';
-		for(var i = 0; i < ykeys.length; i++) {
-			var label = labels[i];
-			var ykey = ykeys[i];
-			var colour = options.lineColors[i];
-
-			output += '<span class="row" style="color: ' + colour + ';">' + label + ': ' + row[ykey] + ' ' + unit + '</span><br />';
-		}
-		output += '</div></div>'
-		return output;
-	}
-
-	$('.player-details-expander').click(function(e) {
-		e.preventDefault();
-
-		var identifier = $(this).attr('data-ref');
-		var entry = $('#' + identifier);
-		var expander = $('#' + identifier + ' > div > .expander-indicator > div > .player-details-expander');
-		var detailsView = $('#' + identifier + ' > .player-data');
-
-		if (detailsView.hasClass('collapsed')) {
-			detailsView.removeClass('collapsed');
-			detailsView.addClass('expanded');
-
-			entry.removeClass('collapsed');
-			entry.addClass('expanded');
-
-			detailsView.show(400, function() { });
-
-			expander.removeClass('glyphicon-chevron-down');
-			expander.addClass('glyphicon-chevron-up');
-		} else {
-			detailsView.removeClass('expanded');
-			detailsView.addClass('collapsed');
+	<link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.4.2/morris.min.js"></script>
+	<script>
+		function generateGraphHoverView(index, options, content, unit) {
+			var row = options.data[index];
+			var ykeys = options.ykeys;
+			var xkey = options.xkey;
+			var labels = options.labels;
 			
-			entry.removeClass('expanded');
-			entry.addClass('collapsed');
+			var output = '<div class="graph-hover-legend"><span class="time">' + row[xkey] + ' Seconds</span><br /><div class="key">';
+			for(var i = 0; i < ykeys.length; i++) {
+				var label = labels[i];
+				var ykey = ykeys[i];
+				var colour = options.lineColors[i];
 
-			detailsView.hide(400, function() { });
-			
-			expander.removeClass('glyphicon-chevron-up');
-			expander.addClass('glyphicon-chevron-down');
+				output += '<span class="row" style="color: ' + colour + ';">' + label + ': ' + row[ykey] + ' ' + unit + '</span><br />';
+			}
+			output += '</div></div>'
+			return output;
 		}
-	});
-</script>
+
+		$('.player-details-expander').click(function(e) {
+			e.preventDefault();
+
+			var identifier = $(this).attr('data-ref');
+			var entry = $('#' + identifier);
+			var expander = $('#' + identifier + ' > div > .expander-indicator > div > .player-details-expander');
+			var detailsView = $('#' + identifier + ' > .player-data');
+
+			if (detailsView.hasClass('collapsed')) {
+				detailsView.removeClass('collapsed');
+				detailsView.addClass('expanded');
+
+				entry.removeClass('collapsed');
+				entry.addClass('expanded');
+
+				detailsView.show(400, function() { });
+
+				expander.removeClass('glyphicon-chevron-down');
+				expander.addClass('glyphicon-chevron-up');
+			} else {
+				detailsView.removeClass('expanded');
+				detailsView.addClass('collapsed');
+				
+				entry.removeClass('expanded');
+				entry.addClass('collapsed');
+
+				detailsView.hide(400, function() { });
+				
+				expander.removeClass('glyphicon-chevron-up');
+				expander.addClass('glyphicon-chevron-down');
+			}
+		});
+	</script>
+<% end %>
+<% content_for :social_meta do %>
+	<% 
+		map_url = ''
+		if (@game['MapImageUrl'] == nil)
+			map_url = get_raw_asset_url(@game['MapImageUrl'], 'large')
+		else
+			map_url = get_raw_asset_url(@chapter['ImageUrl'], 'large')
+		end
+
+		game = ''
+		if (@game['ModeId'] == 4 || @game['ModeId'] == 5)
+			game = @game['MapName']
+		else
+			game = @game['GameVariantName']
+		end
+
+		map = ''
+		if (@game['ModeId'] == 4 || @game['ModeId'] == 5)
+			map = @difficulty['Name']
+		else
+			map = @game['MapVariantName']
+		end
+
+	%>
+
+	<!-- Twitter -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@alexerax">
+	<meta name="twitter:title" content="<%= "#{render partial: "halo4/game_history/partials/game/title/#{@partial_type}"}" %> as <%= gamertag_validation(@service_record['Gamertag']) %>">
+	<meta name="twitter:description" content="<%= gamertag_validation(@service_record["Gamertag"]) %> played <%= game %> on <%= map %>, on <%= parse_datetime(@game['EndDateUtc']) %> that lasted <%= duration_to_friendly(@game['Duration']) %>.">
+	<meta name="twitter:image:src" content="<%= map_url %>">
+	<meta name="twitter:domain" content="https://branchapp.co">
+
+	<!-- Facebook -->
+	<meta property="og:title" content="<%= "#{render partial: "halo4/game_history/partials/game/title/#{@partial_type}"}" %> as <%= gamertag_validation(@service_record['Gamertag']) %>"/>
+	<meta property="og:image" content="<%= map_url %>"/>
+	<meta property="og:site_name" content="Branch"/>
+	<meta property="og:description" content="<%= gamertag_validation(@service_record["Gamertag"]) %> played <%= game %> on <%= map %>, on <%= parse_datetime(@game['EndDateUtc']) %> that lasted <%= duration_to_friendly(@game['Duration']) %>."/>
 <% end %>
 <% content_for :template, 'halo4 halo4_game_history' %>
 
-<%= render partial: 'halo4/partials/header' %>
+<%= render partial: 'halo4/partials/header', locals: { show_social: false } %>
 
 <div class="container">
 	<div class="row">
