--- a/app/views/halo4/specialization/index.html.erb
+++ b/app/views/halo4/specialization/index.html.erb
@@ -8,7 +8,7 @@
 <% end %>
 <% content_for :template, 'halo4 halo4_specialization' %>
 
-<%= render partial: 'halo4/partials/header' %>
+<%= render partial: 'halo4/partials/header', locals: { show_social: true } %>
 
 <div class="container">
 	<div class="row">
