--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -175,7 +175,7 @@
 								<li class="muted">·</li>
 								<li><a href="http://halo.reddit.com/" target="_blank">r/halo</a></li>
 								<li class="muted">·</li>
-								<li><a href="http://unsccommand.com" target="_blank">UNSC Command</a></li>
+								<li><a href="http://unscwarfare.com/" target="_blank">UNSC Warfare</a></li>
 								<li class="muted">·</li>
 								<li><a href="http://onyx.sx" target="_blank">Onyx</a></li>
 								<li class="muted">·</li>
