--- a/app/views/search/focus/halo4.html.erb
+++ b/app/views/search/focus/halo4.html.erb
@@ -30,10 +30,10 @@
 			</div>
 			<ul class="pager">
 				<li class="previous <%= 'disabled' if !@has_less %>">
-					<%= link_to(raw('&larr; Older'), search_halo4_query_path(q: @query, page: @previous_page)) %>
+					<%= link_to(raw('&larr; Previous'), search_halo4_query_path(q: @query, page: @previous_page)) %>
 				</li>
 				<li class="next <%= 'disabled' if !@has_more %>">
-					<%= link_to(raw('Newer &rarr;'), search_halo4_query_path(q: @query, page: @next_page)) %>
+					<%= link_to(raw('Next &rarr;'), search_halo4_query_path(q: @query, page: @next_page)) %>
 				</li>
 			</ul>
 		</div>
