--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -145,7 +145,7 @@
 			<%= yield %>
 
 			<% if (current_user() == nil) %>
-				<div class="container ad-container">
+				<div class="container ad-container hidden-sm hidden-xs">
 					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 					
 					<!-- branch page footer -->
