pretty big bug fix again

--- a/app/views/halo4/game_history/partials/game/players/_player_list.html.erb
+++ b/app/views/halo4/game_history/partials/game/players/_player_list.html.erb
@@ -31,7 +31,7 @@
 						<br />
 						<strong>GEST</strong>
 						<% else %>
-							<%= link_to(gamertag_validation(player['Gamertag']), halo4_servicerecord_path(gamertag: link_to(gamertag_validation(player['Gamertag'])))) %>
+							<%= link_to(gamertag_validation(player['Gamertag']), halo4_servicerecord_path(gamertag: gamertag_validation(player['Gamertag']))) %>
 						<br />
 						<strong><%= player['Servicetag'] %></strong>
 						<% end %>
