added gamertag validations

--- a/app/views/home/partials/_h4_matchmaking_event_multi.html.erb
+++ b/app/views/home/partials/_h4_matchmaking_event_multi.html.erb
@@ -42,7 +42,7 @@
 								<%= result[:friendly_result] %>
 							</strong>
 							a
-							<%= link_to('game', halo4_viewgame_path(gamertag: gamertag.gamertag, game_id: game.game_id)) %>
+							<%= link_to('game', halo4_viewgame_path(gamertag: gamertag_validation(gamertag.gamertag), game_id: game.game_id)) %>
 							of
 							<strong>
 								<%= game.gametype_name %>
